--- a/echo/echo_server/CMakeLists.txt
+++ b/echo/echo_server/CMakeLists.txt
@@ -1,25 +1,22 @@
-# CMake 最低版本号要求
-cmake_minimum_required(VERSION 3.0)
-
 # 项目名称
 project(echo_server)
 
-# C++版本
-set(CMAKE_CXX_STANDARD 20)
-
+include_directories(../include)
 
 # 将 src 目录下的所有源文件加入后面的变量之中
 aux_source_directory(. DIR_EXE_SRCS)
+aux_source_directory(../public DIR_PUBLIC_SRCS)
 
 # 构建可执行文件
-add_executable(${PROJECT_NAME} ${DIR_EXE_SRCS})
+add_executable(${PROJECT_NAME} ${DIR_EXE_SRCS} ${DIR_PUBLIC_SRCS})
 
 # 指定目标链接的库
 target_link_libraries(
         ${PROJECT_NAME}
         PRIVATE
         third_party::lsquic
-        third_party::libevent
+        third_party::event_pthreads
+        third_party::boringssl
         boost::headers_only
         dl
         rt
